--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo_agua.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <title>Vite + React + TS</title>
+    <title>Junta Agua</title>
   </head>
   <body>
     <div id="root"></div>
